esp_gamepad/build/log/idf_py_stdout_output_7300
[1/8] Building CXX object esp-idf/main/CMakeFiles/esp-idf.dir/src/my_lib.cpp.obj
FAILED: esp-idf/main/CMakeFiles/esp-idf.dir/src/my_lib.cpp.obj 
ccache D:\Software\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32s3-elf-g++.exe -DESP_PLATFORM -DIDF_VER=\"v5.3.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/PACMAIN/Project_C/esp_gamepad/build/config -ID:/PACMAIN/Project_C/esp_gamepad/main/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/newlib/platform_include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/include/freertos -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/xtensa/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/esp_additions/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include/soc -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include/soc/esp32s3 -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/dma/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/ldo/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/port/esp32s3/. -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/port/esp32s3/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/heap/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/log/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/soc/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/soc/esp32s3 -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/soc/esp32s3/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/hal/platform_port/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/hal/esp32s3/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/hal/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/include/esp32s3 -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/esp32s3 -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/esp_common/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/port/soc -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/port/include/private -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/esp32s3/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/deprecated_include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/include/apps -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/include/apps/sntp -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/lwip/src/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/freertos/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/esp32xx/include -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/esp32xx/include/arch -ID:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/esp32xx/include/sys -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/PACMAIN/Project_C/esp_gamepad=. -fmacro-prefix-map=D:/Software/Espressif/frameworks/esp-idf-v5.3.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -std=gnu++17 -MD -MT esp-idf/main/CMakeFiles/esp-idf.dir/src/my_lib.cpp.obj -MF esp-idf\main\CMakeFiles\esp-idf.dir\src\my_lib.cpp.obj.d -o esp-idf/main/CMakeFiles/esp-idf.dir/src/my_lib.cpp.obj -c D:/PACMAIN/Project_C/esp_gamepad/main/src/my_lib.cpp
D:/PACMAIN/Project_C/esp_gamepad/main/src/my_lib.cpp: In member function 'void Myclass::say_helloworld()':
D:/PACMAIN/Project_C/esp_gamepad/main/src/my_lib.cpp:4:3: error: 'printf' was not declared in this scope
    4 |   printf("helloword\n");
      |   ^~~~~~
D:/PACMAIN/Project_C/esp_gamepad/main/src/my_lib.cpp:2:1: note: 'printf' is defined in header '<cstdio>'; did you forget to '#include <cstdio>'?
    1 | #include "../include/my_lib.h"
  +++ |+#include <cstdio>
    2 | 
[2/8] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\PACMAIN\Project_C\esp_gamepad\build\bootloader\esp-idf\esptool_py && D:\Software\Espressif\python_env\idf5.3_py3.12_env\Scripts\python.exe D:/Software/Espressif/frameworks/esp-idf-v5.3.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 D:/PACMAIN/Project_C/esp_gamepad/build/bootloader/bootloader.bin"
Bootloader binary size 0x5260 bytes. 0x2da0 bytes (36%) free.
[3/6] Linking CXX executable esp_gamepad.elf
FAILED: esp_gamepad.elf 
cmd.exe /C "cd . && D:\Software\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32s3-elf-g++.exe -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -Wl,--cref -Wl,--defsym=IDF_TARGET_ESP32S3=0 -Wl,--Map=D:/PACMAIN/Project_C/esp_gamepad/build/esp_gamepad.map -Wl,--no-warn-rwx-segments -fno-rtti -fno-lto -Wl,--gc-sections -Wl,--warn-common -T esp32s3.peripherals.ld -T esp32s3.rom.ld -T esp32s3.rom.api.ld -T esp32s3.rom.libgcc.ld -T esp32s3.rom.wdt.ld -T esp32s3.rom.version.ld -T esp32s3.rom.newlib.ld -T memory.ld -T sections.ld @CMakeFiles\esp_gamepad.elf.rsp -o esp_gamepad.elf  && cd ."
D:/Software/Espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/../lib/gcc/xtensa-esp-elf/13.2.0/../../../../xtensa-esp-elf/bin/ld.exe: esp-idf/main/libmain.a(esp_gamepad.cpp.obj):(.literal.app_main+0x0): undefined reference to `Myclass::say_helloworld()'
D:/Software/Espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/../lib/gcc/xtensa-esp-elf/13.2.0/../../../../xtensa-esp-elf/bin/ld.exe: esp-idf/main/libmain.a(esp_gamepad.cpp.obj): in function `app_main':
D:/PACMAIN/Project_C/esp_gamepad/main/esp_gamepad.cpp:13:(.text.app_main+0x1b): undefined reference to `Myclass::say_helloworld()'
collect2.exe: error: ld returned 1 exit status
ninja: build stopped: subcommand failed.
